# streaming_stock_data

./: .gitignore  Cargo.toml  README.md  test_multiple.sh  tickers.txt
.github/workflows/: ci.yml
examples/: test_client.rs
src/: client_manager.rs  generator.rs  lib.rs  models.rs  tcp_server.rs  udp_sender.rs
src/client/: main.rs
src/server/: main.rs
